fix footer, add hr page

--- a/hr.html
+++ b/hr.html
@@ -230,28 +230,28 @@
                     <div class="hr-members_boxes d-flex justify-content-between row">
                         <div class="hr-members_boxIem text-center col-lg-3 col-sm-6">
                             <div class="hr-members_contain">
-                                <img class="rounded-circle img-fluid" src="assets/img/hr/member.png" alt="">
+                                <img class="rounded-circle img-fluid" src="assets/img/hr/member.png" alt="member1">
                                 <p class="hr-members_boxIem-position">採用支援</p>
                                 <h1 class="hr-members_boxIem-name">Ms.Hoa</h1>
                             </div>
                         </div>
                         <div class="hr-members_boxIem text-center col-lg-3 col-sm-6">
                             <div class="hr-members_contain">
-                                <img class="rounded-circle img-fluid" src="assets/img/hr/member.png" alt="">
+                                <img class="rounded-circle img-fluid" src="assets/img/hr/member.png" alt="member2">
                                 <p class="hr-members_boxIem-position">採用支援</p>
                                 <h1 class="hr-members_boxIem-name">Ms.Hoa</h1>
                             </div>
                         </div>
                         <div class="hr-members_boxIem text-center col-lg-3 col-sm-6">
                             <div class="hr-members_contain">
-                                <img class="rounded-circle img-fluid" src="assets/img/hr/member.png" alt="">
+                                <img class="rounded-circle img-fluid" src="assets/img/hr/member.png" alt="member3">
                                 <p class="hr-members_boxIem-position">採用支援</p>
                                 <h1 class="hr-members_boxIem-name">Ms.Hoa</h1>
                             </div>
                         </div>
                         <div class="hr-members_boxIem text-center col-lg-3 col-sm-6">
                             <div class="hr-members_contain">
-                                <img class="rounded-circle img-fluid" src="assets/img/hr/member.png" alt="">
+                                <img class="rounded-circle img-fluid" src="assets/img/hr/member.png" alt="member4">
                                 <p class="hr-members_boxIem-position">採用支援</p>
                                 <h1 class="hr-members_boxIem-name">Ms.Hoa</h1>
                             </div>
